KYC form alignment issue resolved

--- a/src/components/KYC/kyc-style.css
+++ b/src/components/KYC/kyc-style.css
@@ -251,7 +251,7 @@ a.activepaylink-kyc{
   /* font-family: Satoshi; */
   font-size: 15px;
   font-weight: 700;
-  line-height: 36px;
+  line-height: 26px;
   letter-spacing: 0em;
   color: green;
 }
